// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > renders 1`] = `
<button
  class="Button_ButtonContainer__1kgv65v2 Button_ButtonContainer_iconLayout_sx__1kgv65vb Button_ButtonContainer_size_medium__1kgv65v9 Button_ButtonContainer_theme_dark__1kgv65v3 Button_ButtonContainer_variant_primary__1kgv65v5 Button_ButtonContainer_compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4nb Typography_base__3igy4na Typography_BodyStyle_noMargin_true__3igy4nc Typography_BodyStyle_size_m__3igy4ne Typography_BodyStyle_strong_true__3igy4ng"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a disabled state 1`] = `
<button
  class="Button_ButtonContainer__1kgv65v2 Button_ButtonContainer_iconLayout_sx__1kgv65vb Button_ButtonContainer_size_medium__1kgv65v9 Button_ButtonContainer_theme_dark__1kgv65v3 Button_ButtonContainer_variant_primary__1kgv65v5 Button_ButtonContainer_compound_0__1kgv65vd"
  data-disabled="true"
  data-rac=""
  disabled=""
  type="button"
>
  <p
    class="Typography__3igy4nb Typography_base__3igy4na Typography_BodyStyle_noMargin_true__3igy4nc Typography_BodyStyle_size_m__3igy4ne Typography_BodyStyle_strong_true__3igy4ng"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a loading state 1`] = `
<button
  class="Button_ButtonContainer__1kgv65v2 Button_ButtonContainer_iconLayout_sx__1kgv65vb Button_ButtonContainer_size_medium__1kgv65v9 Button_ButtonContainer_theme_dark__1kgv65v3 Button_ButtonContainer_variant_primary__1kgv65v5 Button_ButtonContainer_compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <div
    class="Spinner_Container__gbijxg1 Spinner_Container_size_medium__gbijxg3"
  >
    <div
      class="Spinner_Circle__gbijxg5 Spinner_Circle_size_medium__gbijxgc Spinner_Circle_theme_dark__gbijxg6"
    />
    <div
      class="Spinner_Spin__gbijxgi Spinner_Spin_size_medium__gbijxgp Spinner_Spin_theme_dark__gbijxgm"
    />
  </div>
</button>
`;

exports[`Button component > renders with a size 1`] = `
<button
  class="Button_ButtonContainer__1kgv65v2 Button_ButtonContainer_iconLayout_sx__1kgv65vb Button_ButtonContainer_size_large__1kgv65va Button_ButtonContainer_theme_dark__1kgv65v3 Button_ButtonContainer_variant_primary__1kgv65v5 Button_ButtonContainer_compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4nb Typography_base__3igy4na Typography_BodyStyle_noMargin_true__3igy4nc Typography_BodyStyle_size_l__3igy4nd Typography_BodyStyle_strong_true__3igy4ng"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a theme 1`] = `
<button
  class="Button_ButtonContainer__1kgv65v2 Button_ButtonContainer_iconLayout_sx__1kgv65vb Button_ButtonContainer_size_medium__1kgv65v9 Button_ButtonContainer_theme_dark__1kgv65v3 Button_ButtonContainer_variant_primary__1kgv65v5 Button_ButtonContainer_compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4nb Typography_base__3igy4na Typography_BodyStyle_noMargin_true__3igy4nc Typography_BodyStyle_size_m__3igy4ne Typography_BodyStyle_strong_true__3igy4ng"
  >
    Click me
  </p>
</button>
`;
